exports[`test should renders <DeviceDetail> correctly 1`] = `
<div>
  <HelmetWrapper
    title="範例 A 的測試裝置" />
  <MobileHeader
    leftChildren={
      <MobileHeaderIcon
        component={[Function]}
        to={[Function]}>
        <IconArrowLeft
          size="1em" />
      </MobileHeaderIcon>
    }
    rightChildren={
      Array [
        <MobileHeaderIcon
          component={[Function]}
          onClick={[Function]}>
          <IconMoreVert
              size="1em" />
      </MobileHeaderIcon>,
        false,
      ]
    }
    title="範例 A 的測試裝置" />
  <main>
    <PullToRefresh
      IconArrow={[Function]}
      IconLoading={[Function]}
      isLoading={false}
      onPull={[Function]}>
      <div>
        <styled.div
          size="cover"
          src="https://img.mediatek.com/600/mtk.linkit/productBanner.png" />
        <styled.div>
          <styled.div>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {
                      "unit": "ampere",
                    },
                    "id": "Integer Control id",
                    "type": "INTEGER_CONTROL",
                    "values": Object {
                      "value": 50,
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {
                      "unit": "ampere",
                    },
                    "id": "Integer Display id",
                    "type": "INTEGER_DISPLAY",
                    "values": Object {
                      "value": 50,
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {
                      "unit": "ampere",
                    },
                    "id": "Float Control id",
                    "type": "FLOAT_CONTROL",
                    "values": Object {
                      "value": 50.1235,
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {
                      "unit": "ampere",
                    },
                    "id": "Float Display id",
                    "type": "FLOAT_DISPLAY",
                    "values": Object {
                      "value": 50.55252,
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {},
                    "id": "String Control id",
                    "type": "STRING_CONTROL",
                    "values": Object {
                      "value": "Any string type value.",
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {},
                    "id": "String Display id",
                    "type": "STRING_DISPLAY",
                    "values": Object {
                      "value": "Any string type value.",
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {},
                    "id": "Hex Control id",
                    "type": "HEX_CONTROL",
                    "values": Object {
                      "value": "ABF123",
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {},
                    "id": "Hex Display id",
                    "type": "HEX_DISPLAY",
                    "values": Object {
                      "value": "ABF123",
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {},
                    "id": "Switch Control id",
                    "type": "SWITCH_CONTROL",
                    "values": Object {
                      "value": 1,
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {},
                    "id": "Switch Display",
                    "type": "SWITCH_DISPLAY",
                    "values": Object {
                      "value": 0,
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {
                      "items": Array [
                        Object {
                          "name": "k1",
                          "value": "v1",
                        },
                        Object {
                          "name": "k2",
                          "value": "v2",
                        },
                      ],
                    },
                    "id": "Category Control id",
                    "type": "CATEGORY_CONTROL",
                    "values": Object {
                      "value": "v2",
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {
                      "items": Array [
                        Object {
                          "name": "k1",
                          "value": "v1",
                        },
                        Object {
                          "name": "k2",
                          "value": "v2",
                        },
                        Object {
                          "name": "k3",
                          "value": "v3",
                        },
                        Object {
                          "name": "k4",
                          "value": "v4",
                        },
                        Object {
                          "name": "k5",
                          "value": "v5",
                        },
                      ],
                    },
                    "id": "Category Display",
                    "type": "CATEGORY_DISPLAY",
                    "values": Object {
                      "value": "v2",
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {},
                    "id": "GPIO Control id",
                    "type": "GPIO_CONTROL",
                    "values": Object {
                      "value": 1,
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {},
                    "id": "GPIO Display id",
                    "type": "GPIO_DISPLAY",
                    "values": Object {
                      "value": 0,
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {
                      "lowerbound": 1,
                      "upperbound": 100,
                    },
                    "id": "Analog Control id",
                    "type": "ANALOG_CONTROL",
                    "values": Object {
                      "value": 23,
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {},
                    "id": "PWM Display",
                    "type": "PWM_DISPLAY",
                    "values": Object {
                      "period": 20,
                      "value": "value pwm",
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {
                      "lowerbound": 1,
                      "upperbound": 100,
                    },
                    "id": "PWM Control",
                    "type": "PWM_CONTROL",
                    "values": Object {
                      "period": 20,
                      "value": 1,
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
          </styled.div>
        </styled.div>
      </div>
    </PullToRefresh>
  </main>
</div>
`;

exports[`test should renders <DeviceDetail> correctly when Menu show 1`] = `
<div>
  <HelmetWrapper
    title="範例 A 的測試裝置" />
  <MobileHeader
    leftChildren={
      <MobileHeaderIcon
        component={[Function]}
        to={[Function]}>
        <IconArrowLeft
          size="1em" />
      </MobileHeaderIcon>
    }
    rightChildren={
      Array [
        <MobileHeaderIcon
          component={[Function]}
          onClick={[Function]}>
          <IconMoreVert
              size="1em" />
      </MobileHeaderIcon>,
        <Overlay
          alignConfig={
              Object {
                  "offset": Array [
                    20,
                    -20,
                  ],
                  "points": Array [
                    "tr",
                    "bc",
                  ],
                }
          }
          onClickOutSide={[Function]}
          transitionConfig={
              Object {
                  "component": false,
                  "enter": Object {
                    "translateY": 0,
                  },
                  "leave": Object {
                    "translateY": -10,
                  },
                }
          }>
          <Menu>
              <Styled(Link)
                  to={[Function]}>
                  <MenuItem>
                      deviceIntro
                  </MenuItem>
              </Styled(Link)>
              <Styled(Link)
                  to={[Function]}>
                  <MenuItem>
                      triggerAndAction
                  </MenuItem>
              </Styled(Link)>
          </Menu>
      </Overlay>,
      ]
    }
    title="範例 A 的測試裝置" />
  <main>
    <PullToRefresh
      IconArrow={[Function]}
      IconLoading={[Function]}
      isLoading={false}
      onPull={[Function]}>
      <div>
        <styled.div
          size="cover"
          src="https://img.mediatek.com/600/mtk.linkit/productBanner.png" />
        <styled.div>
          <styled.div>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {
                      "unit": "ampere",
                    },
                    "id": "Integer Control id",
                    "type": "INTEGER_CONTROL",
                    "values": Object {
                      "value": 50,
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {
                      "unit": "ampere",
                    },
                    "id": "Integer Display id",
                    "type": "INTEGER_DISPLAY",
                    "values": Object {
                      "value": 50,
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {
                      "unit": "ampere",
                    },
                    "id": "Float Control id",
                    "type": "FLOAT_CONTROL",
                    "values": Object {
                      "value": 50.1235,
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {
                      "unit": "ampere",
                    },
                    "id": "Float Display id",
                    "type": "FLOAT_DISPLAY",
                    "values": Object {
                      "value": 50.55252,
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {},
                    "id": "String Control id",
                    "type": "STRING_CONTROL",
                    "values": Object {
                      "value": "Any string type value.",
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {},
                    "id": "String Display id",
                    "type": "STRING_DISPLAY",
                    "values": Object {
                      "value": "Any string type value.",
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {},
                    "id": "Hex Control id",
                    "type": "HEX_CONTROL",
                    "values": Object {
                      "value": "ABF123",
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {},
                    "id": "Hex Display id",
                    "type": "HEX_DISPLAY",
                    "values": Object {
                      "value": "ABF123",
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {},
                    "id": "Switch Control id",
                    "type": "SWITCH_CONTROL",
                    "values": Object {
                      "value": 1,
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {},
                    "id": "Switch Display",
                    "type": "SWITCH_DISPLAY",
                    "values": Object {
                      "value": 0,
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {
                      "items": Array [
                        Object {
                          "name": "k1",
                          "value": "v1",
                        },
                        Object {
                          "name": "k2",
                          "value": "v2",
                        },
                      ],
                    },
                    "id": "Category Control id",
                    "type": "CATEGORY_CONTROL",
                    "values": Object {
                      "value": "v2",
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {
                      "items": Array [
                        Object {
                          "name": "k1",
                          "value": "v1",
                        },
                        Object {
                          "name": "k2",
                          "value": "v2",
                        },
                        Object {
                          "name": "k3",
                          "value": "v3",
                        },
                        Object {
                          "name": "k4",
                          "value": "v4",
                        },
                        Object {
                          "name": "k5",
                          "value": "v5",
                        },
                      ],
                    },
                    "id": "Category Display",
                    "type": "CATEGORY_DISPLAY",
                    "values": Object {
                      "value": "v2",
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {},
                    "id": "GPIO Control id",
                    "type": "GPIO_CONTROL",
                    "values": Object {
                      "value": 1,
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {},
                    "id": "GPIO Display id",
                    "type": "GPIO_DISPLAY",
                    "values": Object {
                      "value": 0,
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {
                      "lowerbound": 1,
                      "upperbound": 100,
                    },
                    "id": "Analog Control id",
                    "type": "ANALOG_CONTROL",
                    "values": Object {
                      "value": 23,
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {},
                    "id": "PWM Display",
                    "type": "PWM_DISPLAY",
                    "values": Object {
                      "period": 20,
                      "value": "value pwm",
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
            <DataChannelCard
              data-width="half"
              description="You can input description of controller here. You …"
              subtitle="Last data point time : 2015-06-12 12:00"
              title="Title">
              <DataChannelAdapter
                dataChannelProps={
                  Object {
                    "format": Object {
                      "lowerbound": 1,
                      "upperbound": 100,
                    },
                    "id": "PWM Control",
                    "type": "PWM_CONTROL",
                    "values": Object {
                      "period": 20,
                      "value": 1,
                    },
                  }
                }
                eventHandler={[Function]} />
            </DataChannelCard>
          </styled.div>
        </styled.div>
      </div>
    </PullToRefresh>
  </main>
</div>
`;

exports[`test should return messages 1`] = `
Object {
  "DeviceDetail.deviceIntro": Object {
    "defaultMessage": "測試裝置介紹",
    "description": "dropdown",
    "id": "DeviceDetail.deviceIntro",
  },
  "DeviceDetail.triggerAndAction": Object {
    "defaultMessage": "觸發條件與動作",
    "description": "dropdown",
    "id": "DeviceDetail.triggerAndAction",
  },
}
`;
